Change Attached property to behavior

--- a/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
@@ -11,6 +11,7 @@
     <None Remove="resources\**" />
     <EmbeddedResource Include="Images\**" />
     <EmbeddedResource Include="Fonts\**" />
+    <Compile Remove="Pages\Behaviors\ProgressBarAttachedPropertiesPage.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
