--- a/.editorconfig
+++ b/.editorconfig
@@ -107,3 +107,6 @@ csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
+
+# Code-block preferences
+csharp_prefer_braces = false:suggestion
