changed to use snupkg

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,8 +9,7 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <!-- Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
     <IncludeSymbols>true</IncludeSymbols>
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <!-- <SymbolPackageFormat>snupkg</SymbolPackageFormat> -->
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
