--- a/src/Markup/Xamarin.CommunityToolkit.Markup/mdoc.targets
+++ b/src/Markup/Xamarin.CommunityToolkit.Markup/mdoc.targets
@@ -78,21 +78,9 @@
       <TmpDir>$(MSBuildProjectDirectory)\tmp\</TmpDir>
     </PropertyGroup>
     <ItemGroup Condition=" '$(OS)' == 'Windows_NT' ">
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\MonoAndroid\v1.0" />
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\MonoAndroid\v10.0" />
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\Xamarin.iOS\v1.0" />
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\Xamarin.TVOS\v1.0" />
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\Xamarin.WatchOS\v1.0" />
-      <MDocReferenceAssembly Include="$(FrameworkReferenceAssemblyPath)\Xamarin.Mac\v2.0" />
       <MDocReferenceAssembly Include="$(TmpDir)references" />
-      <MDocReferenceAssembly Include="$(WindowsKitsReferenceAssemblyPath)\Windows.Foundation.FoundationContract\5.0.0.0" />
-      <MDocReferenceAssembly Include="$(WindowsKitsReferenceAssemblyPath)\Windows.Foundation.UniversalApiContract\5.0.0.0" />
     </ItemGroup>
     <!-- the actual task -->
-    
-    <ItemGroup>
-      <MDocReferenceAssembly Include="$(BinConfigDir)monoandroid10.0" />
-    </ItemGroup>
     <PropertyGroup>
       <MDocReferenceAssemblies>@(MDocReferenceAssembly -> '--lib=&quot;%(Identity)&quot;', ' ')</MDocReferenceAssemblies>
     </PropertyGroup>
@@ -101,19 +89,12 @@
     <MakeDir Directories="$(TmpDir)" />
     <MakeDir Directories="$(TmpDir)references" />
     <ItemGroup>
-        <MySourceFiles Include="$(NuGetPackageRoot)\xamarin.forms\5.0.0.*\**\*.dll"/>
+        <MySourceFiles Include="$(NuGetPackageRoot)xamarin.forms\5.0.0.*\**\*.dll"/>
     </ItemGroup>
     <Copy SourceFiles="@(MySourceFiles)" DestinationFolder="$(TmpDir)references\" />
-    <Copy SourceFiles="$(MDocDocumentationDirectory)\..\frameworks.xml" DestinationFolder="$(TmpDir)" />
-    <Copy SourceFiles="$(BinConfigDir)netstandard2.1\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit" />
-    <Copy SourceFiles="$(BinConfigDir)monoandroid10.0\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-android" />
-    <Copy SourceFiles="$(BinConfigDir)xamarin.ios10\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-ios" />
-    <Copy SourceFiles="$(BinConfigDir)xamarin.mac20\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-macos" />
-    <Copy SourceFiles="$(BinConfigDir)xamarin.tvos10\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-tvos" />
-    <Copy SourceFiles="$(BinConfigDir)xamarin.watchos10\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-watchos" />
-    <Copy SourceFiles="$(BinConfigDir)tizen40\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-tizen" />
-    <Copy SourceFiles="$(BinConfigDir)uap10.0.17763\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-uwp" />
-    <Exec Command="$(_ManagedExeLauncher) &quot;$(MDocToolPath)&quot; update --debug --lang=DocId --frameworks=&quot;$(TmpDir)frameworks.xml&quot; --out=&quot;$(MDocDocumentationDirectory)&quot; $(MDocReferenceAssemblies) -i &quot;$(BinConfigDir)netstandard2.1\$(AssemblyName).xml&quot;" />
+    <Copy SourceFiles="$(MDocDocumentationDirectory)\..\frameworks-markup.xml" DestinationFiles="$(TmpDir)frameworks.xml" />
+    <Copy SourceFiles="$(BinConfigDir)netstandard2.0\$(AssemblyName).dll" DestinationFolder="$(TmpDir)xamarin-community-toolkit-markup" />
+    <Exec Command="$(_ManagedExeLauncher) &quot;$(MDocToolPath)&quot; update --debug --lang=DocId --frameworks=&quot;$(TmpDir)frameworks.xml&quot; --out=&quot;$(MDocDocumentationDirectory)&quot; $(MDocReferenceAssemblies) -i &quot;$(BinConfigDir)netstandard2.0\$(AssemblyName).xml&quot;" />
     <_FormatDocs DocsRoot="$(MDocDocumentationDirectory)" />
     <_VerifyAllDocsAreComplete DocsRoot="$(MDocDocumentationDirectory)" />
   </Target>
