--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -187,4 +187,4 @@ jobs:
     - template: sign-artifacts/jobs/v2.yml@internal-templates
       parameters:
         dependsOn: [ build_windows ]
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+        condition: and(succeeded(), or(eq(variables['Sign'], 'true'), or(eq(variables['Build.SourceBranch'], 'refs/heads/main'), startsWith(variables['Build.SourceBranch'],'refs/tags/'))))
