--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -131,10 +131,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
-          script: |
-            UnitTestProject=`find . -name Xamarin.CommunityToolkit.UnitTests.csproj`
-            echo $UnitTestProject
-            dotnet test $UnitTestProject -c 'Release' --collect "Code coverage"'
+          script: dotnet test ./src/CommunityToolkit/Xamarin.CommunityToolkit.UnitTests -c 'Release' --collect "Code coverage"'
       # publish the packages
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Unsigned NuGets'
