--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ variables:
   #MONO_VERSION: 6_4_0
   #XCODE_VERSION: 11.4
   NETCORE_VERSION: '5.0.x'
-  NETCORE_TEST_VERSION: '5.0.x'
+  NETCORE_TEST_VERSION_3_1: '3.1.x'
+  NETCORE_TEST_VERSION_2_1: '2.1.x'
   RunPoliCheck: 'false'
   PathToCsproj: 'src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj'
   PathToMarkupCsproj: 'src/Markup/Xamarin.CommunityToolkit.Markup/Xamarin.CommunityToolkit.Markup.csproj'
@@ -70,24 +71,19 @@ jobs:
       vmImage: windows-2019
     steps:
       - task: UseDotNet@2
-        displayName: 'Use .NET SDK'
+        displayName: 'Install .NET SDK'
         inputs:
           version: $(NETCORE_VERSION)
           includePreviewVersions: false
       - task: UseDotNet@2
-        displayName: 'Use .Net SDK'
+        displayName: 'Install .NET 3.1 Test SDK'
         inputs:
-          version: $(NETCORE_TEST_VERSION)
+          version: $(NETCORE_TEST_VERSION_3_1)
           includePreviewVersions: false
       - task: UseDotNet@2
-        displayName: 'Use .Net 2.1 SDK'
+        displayName: 'Install .NET 2.1 Test SDK'
         inputs:
-          version: '2.1.x'
-          includePreviewVersions: false
-      - task: UseDotNet@2
-        displayName: 'Use .Net 2.1 SDK'
-        inputs:
-          version: '3.1.x'
+          version: $(NETCORE_TEST_VERSION_2_1)
           includePreviewVersions: false
       # if this is a tagged build, then update the version number
       - powershell: |
@@ -136,7 +132,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
-          script: dotnet test $(PathToUnitTestCsproj) -c 'Release'
+          script: dotnet test $(PathToUnitTestCsproj) -c 'Release' --collect "Code coverage"
       # publish the packages
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Unsigned NuGets'
@@ -180,14 +176,19 @@ jobs:
       #  displayName: Switch to the latest Xcode
       # restore, build and pack the packages
       - task: UseDotNet@2
-        displayName: 'Use .NET SDK'
+        displayName: 'Install .NET SDK'
         inputs:
           version: $(NETCORE_VERSION)
           includePreviewVersions: false
       - task: UseDotNet@2
-        displayName: 'Use .Net SDK'
+        displayName: 'Install .NET 3.1 Test SDK'
         inputs:
-          version: $(NETCORE_TEST_VERSION)
+          version: $(NETCORE_TEST_VERSION_3_1)
+          includePreviewVersions: false
+      - task: UseDotNet@2
+        displayName: 'Install .NET 2.1 Test SDK'
+        inputs:
+          version: $(NETCORE_TEST_VERSION_2_1)
           includePreviewVersions: false
       - task: CmdLine@2
         displayName: 'Build Solution'
