--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,12 +129,10 @@ jobs:
 #          command: 'custom'
 #          custom: 'nuget'
 #          arguments: 'push --source https://nuget.pkg.github.com/xamarin/index.json --api-key $(GitHub.NuGet.Token) "$(Build.ArtifactStagingDirectory)\nuget\*.nupkg"'
-      - task: DotNetCoreCLI@2
-        displayName: Run Tests
+      - task: CmdLine@2
+        displayName: 'Run Unit Tests'
         inputs:
-          command: test
-          projects: '**/*.UnitTests.csproj'
-          arguments: '--configuration Release --collect "Code coverage'
+          script: dotnet test $(PathToUnitTestCsproj) -c 'Release' --collect "Code coverage"
       # publish the packages
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Unsigned NuGets'
