Remove Nullabilty from LocalizedString.generator

--- a/.editorconfig
+++ b/.editorconfig
@@ -110,3 +110,6 @@ csharp_new_line_before_members_in_anonymous_types = true
 
 # SA1011: Closing square brackets should be spaced correctly
 dotnet_diagnostic.SA1011.severity = none
+
+# CS4014: Because this call is not awaited, execution of the current method continues before the call is completed
+dotnet_diagnostic.CS4014.severity = error
