--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -199,9 +199,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
-          script: |
-            nuget restore $(PathToUnitTestCsproj)
-            dotnet test -c Release $(PathToUnitTestCsproj)
+          script: 'dotnet test -c Release $(PathToUnitTestCsproj)'
       - task: CmdLine@2
         displayName: 'Pack NuGets'
         inputs:
