--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -160,7 +160,7 @@ jobs:
   - job: build_macos
     displayName: Build macOS Library
     pool:
-      vmImage: macos-10.15
+      vmImage: macos-latest
     steps:
       # if this is a tagged build, then update the version number
       - powershell: |
