--- a/src/Markup/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests.csproj
+++ b/src/Markup/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-android</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
