Update for .NET 6 Preview 7

--- a/src/Markup/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests.csproj
+++ b/src/Markup/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests/Xamarin.CommunityToolkit.Markup.MauiCompat.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0-android</TargetFramework>
+    <UseMaui>true</UseMaui>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
