--- a/src/CommunityToolkit/Directory.build.props
+++ b/src/CommunityToolkit/Directory.build.props
@@ -25,7 +25,7 @@
     <ItemGroup>
         <Compile Include="**/*.shared.cs" />
         <Compile Include="**/*.shared.*.cs" />    
-        <None Include="../../LICENSE" PackagePath="" Pack="true" />
+        <None Include="../../../LICENSE" PackagePath="" Pack="true" />
         <None Include="../../assets/XamarinCommunityToolkit_128x128.png" PackagePath="icon.png" Pack="true" />
     </ItemGroup>
 
